<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyRegisterActivity"
    android:background="#ff000000"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_register"
        android:text="@string/device_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ff000000"
        android:textColor="#ffffffff"
        android:gravity="start"
        android:textStyle="bold"
        android:textSize="25sp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/table_title_add"
            android:text="@string/device_definition_Add"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="#ff000000"
            android:textColor="#ffffffff"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="40dp"/>

        <TextView
            android:id="@+id/table_title_rssi"
            android:text="@string/device_definition_rssi"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="#ff000000"
            android:textColor="#ffffffff"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="40dp"/>

        <TextView
            android:id="@+id/table_title_name"
            android:text="@string/device_definition_name"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:background="#ff000000"
            android:textColor="#ffffffff"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="40dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/title_register"
        android:layout_marginTop="40dp"
        android:background="#ff000000"
        android:textColor="#ffffffff">

        <TextView
            android:id="@+id/device1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="#ff45adff"
            android:textStyle="bold"
            android:singleLine="true"
            android:minHeight="50dp"
            android:onClick="registerUnlockDevice"
            android:clickable="true">
        </TextView>

        <TextView
            android:id="@+id/device2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="#ff45adff"
            android:textStyle="bold"
            android:singleLine="true"
            android:minHeight="50dp"
            android:onClick="registerUnlockDevice"
            android:clickable="true">
        </TextView>

        <TextView
            android:id="@+id/device3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="#ff45adff"
            android:textStyle="bold"
            android:singleLine="true"
            android:minHeight="50dp"
            android:onClick="registerUnlockDevice"
            android:clickable="true">
        </TextView>

        <TextView
            android:id="@+id/device4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="#ff45adff"
            android:textStyle="bold"
            android:singleLine="true"
            android:minHeight="50dp"
            android:onClick="registerUnlockDevice"
            android:clickable="true">
        </TextView>

        <TextView
            android:id="@+id/device5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="#ff45adff"
            android:textStyle="bold"
            android:singleLine="true"
            android:minHeight="50dp"
            android:onClick="registerUnlockDevice"
            android:clickable="true">
        </TextView>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_search_device_str"
        android:onClick="launchSearch"
        android:id="@+id/searchButton"
        android:layout_gravity="center_horizontal"
        android:textColor="#ff000000"
        android:singleLine="false"
        android:background="#ffffffff"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
